# crag-srag-pipeline

./: ISSUES.md  README.md  TESTING_QUERIES.md  main.py  pyproject.toml
data/: orion_specs.md
src/: evaluator.py  generation.py  ingestion.py  main.py  retrieval.py  rewriter.py  schema.py
tests/: test_pipeline.py
workflows/: crag_logic.md  ingestion_logic.md  overall_architecture.md  srag_logic.md
